growing-shop-auth/src/main/java/com/example/growingshopauth/config/error/exception/NotFoundUserException.java
package com.example.growingshop.global.error.exception;

public class NotFoundUserException extends RuntimeException {
    public NotFoundUserException(String message) {
        super(message);
    }
}
